<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2020 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/unlock_aircraft_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/uxsdk_access_locker_padding"
        android:text="@string/uxsdk_enter_security_password"
        android:textColor="@color/uxsdk_white"
        android:textSize="@dimen/uxsdk_access_locker_button_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_header_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/uxsdk_access_locker_row_margin"
        android:background="@color/uxsdk_gray_45"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unlock_aircraft_header" />

    <TextView
        android:id="@+id/unlock_aircraft_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/uxsdk_access_locker_element_margin"
        android:padding="@dimen/uxsdk_access_locker_padding"
        android:text="@string/uxsdk_security_password_warning"
        android:textColor="@color/uxsdk_white"
        android:textSize="@dimen/uxsdk_text_size_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_header_separator" />

    <EditText
        android:id="@+id/enter_aircraft_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/uxsdk_access_locker_element_margin"
        android:background="@drawable/uxsdk_background_rounded_edit_text"
        android:hint="@string/uxsdk_enter_password"
        android:inputType="textPassword"
        android:padding="@dimen/uxsdk_access_locker_edit_text_padding"
        android:textColor="@color/uxsdk_black"
        android:textSize="@dimen/uxsdk_text_size_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unlock_aircraft_warning" />

    <TextView
        android:id="@+id/text_view_format_aircraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/uxsdk_access_locker_element_margin"
        android:background="@drawable/uxsdk_selector_format_access_locker"
        android:gravity="center_vertical|end"
        android:padding="@dimen/uxsdk_access_locker_padding"
        android:text="@string/uxsdk_format_button"
        android:textColor="@color/uxsdk_selector_format_button"
        android:textSize="@dimen/uxsdk_access_locker_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_aircraft_password" />


    <TextView
        android:id="@+id/text_view_cancel_access_locker_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/uxsdk_access_locker_element_margin"
        android:background="@drawable/uxsdk_selector_dialog_button_background"
        android:gravity="center"
        android:padding="@dimen/uxsdk_access_locker_padding"
        android:text="@string/uxsdk_app_cancel"
        android:textColor="@color/uxsdk_selector_dialog_button_text"
        android:textSize="@dimen/uxsdk_access_locker_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/unlock_aircraft"
        app:layout_constraintTop_toBottomOf="@+id/enter_aircraft_password" />


    <TextView
        android:id="@+id/unlock_aircraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/uxsdk_access_locker_element_margin"
        android:background="@drawable/uxsdk_selector_dialog_button_background"
        android:gravity="center"
        android:padding="@dimen/uxsdk_access_locker_padding"
        android:text="@string/uxsdk_unlock"
        android:textColor="@color/uxsdk_selector_dialog_button_text"
        android:textSize="@dimen/uxsdk_access_locker_button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_aircraft_password" />

</merge>